--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <title>React App</title>
+    <title>ATG social media</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
